--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://cpazip.com
             <div class="col-xl-8 col-lg-9 col-md-10 col-sm-10 col-xs-11 col-11 text-center hack">
 
                 <div class="hack-header px-2">
-                    <img class="img-fluid logo w-60-d-80-m mx-auto" src="img/logo.png">
+                    <img class="img-fluid logo w-60-d-80-m mx-auto" src="logo.png">
                 </div>
 
                 <div class="row justify-content-center align-items-center pt-2">
