--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://cpazip.com
 
                         <h4 class="hack-generator end pt-2 pb-2"></h4>
 
-                        <a id="verify-button" href="MYLOCKER"> <button type="button" class="btn btn-light btn-block btn-lg btn-c btn-l h-v pb-3">Confirm</button></a>
+                        <a id="verify-button" href="https://smrturl.co/o/349411/53308847?s1="> <button type="button" class="btn btn-light btn-block btn-lg btn-c btn-l h-v pb-3">Confirm</button></a>
 
                     </div>
 
